<resources>

    <string name="Accueil">HOME</string>
    <string name="app_name">HomeControlApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="retour">&lt;</string>
    <string name="switch1">Automatic Mode</string>
    <string name="Brigthness"></string>
    <string name="editTemp"></string>
    <string name="editLight"></string>
    <string name="Shutter_Anim"></string>

    <drawable name="btnretour">#242223</drawable>

    <string name="consigne_Light2">BRIGHTNESS</string>
    <string name="btn_etats">STATES</string>
    <string name="btn_consignes">SETPOINTS</string>
    <string name="btn_volet">SHUTTER</string>
    <string name="btn_Lampe">LIGHT</string>
    <string name="btn_config">SETUP</string>
    <string name="click_Consigne">click</string>
    <string name="title_activity_consigne">Setpoints</string>
    <string name="title_activity_etat">States</string>
    <string name="title_activity_lampe">Light</string>
    <string name="title_activity_configuration">Setup</string>
    <string name="title_activity_volet">Shutter</string>
    <string name="Consigne">SETPOINTS</string>
    <string name="Etat">STATES</string>
    <string name="Lampe">LIGHT</string>
    <string name="Configuration">SETUP</string>
    <string name="Volet">SHUTTER</string>
    <string name="consigne_Temp">Temperature</string>
    <string name="consigne_Light">Brightness</string>

    <!-- VALEURS ETATS_______Activity_etat -->
    <string name="valeur_tempInt">xx°</string>
    <string name="valeur_tempExt">xx°</string>
    <string name="valeur_meteo">xxx</string>
    <string name="valeur_lightInt">xxx lux</string>
    <string name="valeur_lightExt">xxx lux</string>
    <string name="valeur_positionVolet">xxx</string>
    <string name="valeur_lightLevel">xxx %</string>
    <string name="valeur_lightBrightness">xxx lux</string>

    <!-- Etat________Activity_etat -->
    <string name="etat_tempInt">Inside Temperature</string>
    <string name="etat_tempExt">Outside Temperature</string>
    <string name="etat_meteo">Weather</string>
    <string name="etat_lightInt">Inside Brightness</string>
    <string name="etat_lightExt">Outside Brightness</string>
    <string name="etat_positionVolet">Shutter Position</string>
    <string name="etat_lightLevel">Light Level</string>
    <string name="etat_lightBrightness">Light Wattage</string>

    <!-- Lampe -->
    <string name="lampe_intensite">Brightness</string>

    <!-- Volet -->
    <string name="volet_state">Shutter Position</string>
    <string name="config_address_ip">IP Adress</string>
    <string name="desc">image</string>

</resources>