<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background" >

    <!-- STATUS BAR -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/StatusBar" >

        <ImageView style="@style/RetourHome" />

        <LinearLayout style="@style/BarStatusBar" />

        <TextView
            android:id="@+id/text_bar_Consigne"
            style="@style/TextStatusBar"
            android:text="@string/Consigne"
            tools:context=".MainActivity" />

        <LinearLayout style="@style/BarStatusBar" />
    </LinearLayout>

    <!-- BODY -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/ActionBar" >

        <ImageView
            android:id="@+id/ImageTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="0"
            android:src="@drawable/temp" />

        <TextView
            android:id="@+id/textViewConsigne_Temp"
            android:layout_width="145dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/consigne_Temp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/edit_Temperature"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/editTemp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- ScrollView -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/ActionBar" >

        <SeekBar
            android:id="@+id/seekBar_Temp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="300"
            android:progress="0"
            android:secondaryProgress="2" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/ActionBar" >

        <ImageView
            android:id="@+id/ImageLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="0"
            android:src="@drawable/lamp" />

        <TextView
            android:id="@+id/textViewConsigne_Light"
            android:layout_width="145dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/consigne_Light"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/edit_Light"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/editLight"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- SeekBar -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/ActionBar" >

        <SeekBar
            android:id="@+id/seekBar_Light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="1000"
            android:progress="0"
            android:secondaryProgress="2" />
    </LinearLayout>

    <!-- BAS DE PAGE -->
    <!-- BAS DE PAGE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/android" />
    </LinearLayout>

</LinearLayout>