<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background" >

    <!-- STATUS BAR -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/StatusBar" >

        <ImageView style="@style/RetourHome" />

        <LinearLayout style="@style/BarStatusBar" />

        <TextView
            android:id="@+id/text_bar_Lampe"
            style="@style/TextStatusBar"
            android:text="@string/Lampe"
            tools:context=".MainActivity" />

        <LinearLayout style="@style/BarStatusBar" />
    </LinearLayout>

    <!-- LAMPE -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/ActionBar" >

        <ImageView
            android:id="@+id/ImageLampe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="0"
            android:src="@drawable/lamp" />

        <TextView
            android:id="@+id/ac_lampe_intensite"
            android:layout_width="145dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/lampe_intensite"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/edit_Intensite"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/Brigthness"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- ScrollView -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/ActionBar" >

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="1"
            android:secondaryProgress="2" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	<ImageView
            android:id="@+id/imageLampeGrad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lampe1" />
       
    </LinearLayout>


    <!-- BAS DE PAGE -->
    <!-- BAS DE PAGE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

       
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/android" />
    </LinearLayout>

</LinearLayout>